--- a/pacman.conf
+++ b/pacman.conf
@@ -100,3 +100,8 @@ Include = /etc/pacman.d/mirrorlist
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+
+
+[alg_repo]
+SigLevel = Optional TrustedOnly
+Server = https://arch-linux-gui.github.io/$repo/$arch
