--- a/efiboot/loader/entries/archiso-x86_64-speech-linux.conf
+++ b/efiboot/loader/entries/archiso-x86_64-speech-linux.conf
@@ -1,7 +1,7 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-title   Arch Linux GUI install medium (x86_64, UEFI) with speech
+title   Arch Linux install medium (x86_64, UEFI) with speech
 linux   /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd  /%INSTALL_DIR%/boot/intel-ucode.img
 initrd  /%INSTALL_DIR%/boot/amd-ucode.img
