--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -101,7 +101,9 @@ Include = /etc/pacman.d/mirrorlist
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
-
 [alg_repo]
 SigLevel = Optional TrustedOnly
 Server = https://arch-linux-gui.github.io/$repo/$arch
+
+[chaotic-aur]
+Include = /etc/pacman.d/chaotic-mirrorlist
