--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -32,8 +32,8 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-#Color
-#TotalDownload
+Color
+#ParallelDownloads = 5
 # We cannot check disk space from within a chroot environment
 #CheckSpace
 #VerbosePkgLists
@@ -101,6 +101,6 @@ Include = /etc/pacman.d/mirrorlist
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
-#[alg_repo]
-#SigLevel = Optional TrustedOnly
-#Server = https://arch-linux-gui.github.io/$repo/$arch
+[alg_repo]
+SigLevel = Optional TrustedOnly
+Server = https://arch-linux-gui.github.io/$repo/$arch
