--- a/pacman.conf
+++ b/pacman.conf
@@ -104,3 +104,7 @@ Include = /etc/pacman.d/mirrorlist
 [alg_repo]
 SigLevel = Optional TrustedOnly
 Server = https://arch-linux-gui.github.io/$repo/$arch
+
+[alg-settings]
+SigLevel = Optional TrustedOnly
+Server = https://arch-linux-gui.github.io/$repo/$arch
