ALG Sept 2109 Releng

--- a/pacman.conf
+++ b/pacman.conf
@@ -32,8 +32,8 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-#Color
-#TotalDownload
+Color
+ParallelDownloads=5
 # We cannot check disk space from within a chroot environment
 #CheckSpace
 #VerbosePkgLists
@@ -108,3 +108,7 @@ Server = https://arch-linux-gui.github.io/$repo/$arch
 [alg-settings]
 SigLevel = Optional TrustedOnly
 Server = https://arch-linux-gui.github.io/$repo/$arch
+
+[chaotic-aur]
+Include = /etc/pacman.d/chaotic-mirrorlist
+
