add bluetooth headphone support

--- a/pacman.conf
+++ b/pacman.conf
@@ -109,6 +109,6 @@ Server = https://arch-linux-gui.github.io/$repo/$arch
 SigLevel = Optional TrustedOnly
 Server = https://arch-linux-gui.github.io/$repo/$arch
 
-[chaotic-aur]
-Include = /etc/pacman.d/chaotic-mirrorlist
+#[chaotic-aur]
+#Include = /etc/pacman.d/chaotic-mirrorlist
 
