move alg-repo above core

--- a/pacman.conf
+++ b/pacman.conf
@@ -74,6 +74,10 @@ LocalFileSigLevel = Optional
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
 
+[alg_repo]
+SigLevel = Optional TrustedOnly
+Server = https://arch-linux-gui.github.io/$repo/$arch
+
 [core]
 Include = /etc/pacman.d/mirrorlist
 
@@ -101,14 +105,10 @@ Include = /etc/pacman.d/mirrorlist
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
-[alg_repo]
-SigLevel = Optional TrustedOnly
-Server = https://arch-linux-gui.github.io/$repo/$arch
-
 [alg-settings]
 SigLevel = Optional TrustedOnly
 Server = https://arch-linux-gui.github.io/$repo/$arch
 
-#[chaotic-aur]
-#Include = /etc/pacman.d/chaotic-mirrorlist
+[chaotic-aur]
+Include = /etc/pacman.d/chaotic-mirrorlist
 
