--- a/pacman.conf
+++ b/pacman.conf
@@ -2,8 +2,6 @@
 # /etc/pacman.conf
 #
 # See the pacman.conf(5) manpage for option and repository directives
-#
-# SPDX-License-Identifier: GPL-3.0-or-later
 
 #
 # GENERAL OPTIONS
@@ -32,11 +30,12 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-Color
-ParallelDownloads=5
+#Color
+#NoProgressBar
 # We cannot check disk space from within a chroot environment
 #CheckSpace
 #VerbosePkgLists
+ParallelDownloads = 5
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -74,10 +73,6 @@ LocalFileSigLevel = Optional
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[alg_repo]
-SigLevel = Optional TrustedOnly
-Server = https://arch-linux-gui.github.io/$repo/$arch
-
 [core]
 Include = /etc/pacman.d/mirrorlist
 
@@ -105,10 +100,13 @@ Include = /etc/pacman.d/mirrorlist
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
+[alg_repo]
+SigLevel = Optional TrustedOnly
+Server = https://arch-linux-gui.github.io/$repo/$arch
+
 [alg-settings]
 SigLevel = Optional TrustedOnly
 Server = https://arch-linux-gui.github.io/$repo/$arch
 
 [chaotic-aur]
 Include = /etc/pacman.d/chaotic-mirrorlist
-
