--- a/airootfs/etc/sddm.conf.d/autologin.conf
+++ b/airootfs/etc/sddm.conf.d/autologin.conf
@@ -1,9 +1,7 @@
 [Autologin]
-# Whether sddm should automatically log back into sessions when they exit
 Relogin=false
-
-# Name of session file for autologin session (if empty try last logged in)
+User=liveuser
 Session=plasma
 
-# Username for autologin session
-User=liveuser
+[Theme]
+Current=breeze-dark
