--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -2,8 +2,6 @@
 # /etc/pacman.conf
 #
 # See the pacman.conf(5) manpage for option and repository directives
-#
-# SPDX-License-Identifier: GPL-3.0-or-later
 
 #
 # GENERAL OPTIONS
@@ -33,10 +31,10 @@ Architecture = auto
 # Misc options
 #UseSyslog
 Color
-ParallelDownloads = 5
-# We cannot check disk space from within a chroot environment
-#CheckSpace
+#NoProgressBar
+CheckSpace
 #VerbosePkgLists
+ParallelDownloads = 5
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
