--- a/airootfs/etc/sddm.conf
+++ b/airootfs/etc/sddm.conf
@@ -120,3 +120,24 @@ XauthPath=/usr/bin/xauth
 
 # Path to Xephyr binary
 XephyrPath=/usr/bin/Xephyr
+
+
+[Wayland]
+EnableHiDPI=true
+SessionCommand=/usr/share/sddm/scripts/wayland-session
+SessionDir=/usr/share/wayland-sessions
+SessionLogFile=.local/share/sddm/wayland-session.log
+
+[X11]
+DisplayCommand=/usr/share/sddm/scripts/Xsetup
+DisplayStopCommand=/usr/share/sddm/scripts/Xstop
+EnableHiDPI=true
+MinimumVT=1
+ServerArguments=-nolisten tcp
+ServerPath=/usr/bin/X
+SessionCommand=/usr/share/sddm/scripts/Xsession
+SessionDir=/usr/share/xsessions
+SessionLogFile=.local/share/sddm/xorg-session.log
+UserAuthFile=.Xauthority
+XauthPath=/usr/bin/xauth
+XephyrPath=/usr/bin/Xephyr
