[MAJOR] Updated iso-profile to latest standard

--- a/airootfs/etc/mkinitcpio.conf
+++ b/airootfs/etc/mkinitcpio.conf
@@ -1,3 +1,6 @@
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 # vim:set ft=sh
 # MODULES
 # The following modules are loaded before any boot hooks are
@@ -57,10 +60,10 @@ HOOKS=(base udev modconf kms memdisk archiso archiso_loop_mnt archiso_pxe_common
 #COMPRESSION="gzip"
 #COMPRESSION="bzip2"
 #COMPRESSION="lzma"
-COMPRESSION="xz"
+#COMPRESSION="xz"
 #COMPRESSION="lzop"
 #COMPRESSION="lz4"
-#COMPRESSION="zstd"
+COMPRESSION="zstd"
 
 # COMPRESSION_OPTIONS
 # Additional options for the compressor
