[TEMP-FIX] move sddm to breeze

--- a/airootfs/etc/sddm.conf
+++ b/airootfs/etc/sddm.conf
@@ -19,7 +19,7 @@ RebootCommand=/usr/bin/systemctl reboot
 
 [Theme]
 # Current theme name
-Current=Qogir
+Current=breeze
 
 # Cursor theme used in the greeter
 CursorTheme=Bibata-Modern-Ice
