rewrite wayland entries in sddm.conf

--- a/airootfs/etc/sddm.conf
+++ b/airootfs/etc/sddm.conf
@@ -71,62 +71,11 @@ ReuseSession=true
 
 
 [Wayland]
-# Enable Qt's automatic high-DPI scaling
-EnableHiDPI=false
-
-# Path to a script to execute when starting the desktop session
-SessionCommand=/usr/share/sddm/scripts/wayland-session
-
-# Directory containing available Wayland sessions
-SessionDir=/usr/share/wayland-sessions
-
-# Path to the user session log file
-SessionLogFile=.local/share/sddm/wayland-session.log
-
-
-[X11]
-# Path to a script to execute when starting the display server
-DisplayCommand=/usr/share/sddm/scripts/Xsetup
-
-# Path to a script to execute when stopping the display server
-DisplayStopCommand=/usr/share/sddm/scripts/Xstop
-
-# Enable Qt's automatic high-DPI scaling
-EnableHiDPI=false
-
-# The lowest virtual terminal number that will be used.
-MinimumVT=1
-
-# Arguments passed to the X server invocation
-ServerArguments=-nolisten tcp
-
-# Path to X server binary
-ServerPath=/usr/bin/X
-
-# Path to a script to execute when starting the desktop session
-SessionCommand=/usr/share/sddm/scripts/Xsession
-
-# Directory containing available X sessions
-SessionDir=/usr/share/xsessions
-
-# Path to the user session log file
-SessionLogFile=.local/share/sddm/xorg-session.log
-
-# Path to the Xauthority file
-UserAuthFile=.Xauthority
-
-# Path to xauth binary
-XauthPath=/usr/bin/xauth
-
-# Path to Xephyr binary
-XephyrPath=/usr/bin/Xephyr
-
-
-[Wayland]
 EnableHiDPI=true
 SessionCommand=/usr/share/sddm/scripts/wayland-session
 SessionDir=/usr/share/wayland-sessions
 SessionLogFile=.local/share/sddm/wayland-session.log
+# Enable=false
 
 [X11]
 DisplayCommand=/usr/share/sddm/scripts/Xsetup
