--- a/efiboot/loader/entries/01-archiso-x86_64-linux.conf
+++ b/efiboot/loader/entries/01-archiso-x86_64-linux.conf
@@ -5,4 +5,4 @@ title   Arch Linux installer (x86_64, UEFI), FOSS GPU DRIVERS
 sort-key 01
 linux   /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd  /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
-options archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=4G driver=free module_blacklist=nvidia,nvidia_modeset,nvidia_uvm,nvidia_drm nouveau.modeset=1 radeon.modeset=1 i915.modeset=1 nvme_load=yes
+options archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=4G driver=free module_blacklist=nvidia,nvidia_modeset,nvidia_uvm,nvidia_drm nouveau.modeset=1 radeon.modeset=1 i915.modeset=1 copytoram=n nvme_load=yes
