Renamed Arch Linux GUI with ALG

--- a/efiboot/loader/entries/02-archiso-x86_64-linux-nvidia.conf
+++ b/efiboot/loader/entries/02-archiso-x86_64-linux-nvidia.conf
@@ -1,7 +1,7 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-title   Arch Linux installer (x86_64, UEFI), LATEST NVIDIA GPUs ONLY
+title   ALG installer (x86_64, UEFI), LATEST NVIDIA GPUs ONLY
 sort-key 02
 linux   /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd  /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
