--- a/efiboot/loader/entries/01-archiso-x86_64-linux.conf
+++ b/efiboot/loader/entries/01-archiso-x86_64-linux.conf
@@ -1,7 +1,7 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-title   Arch Linux installer (x86_64, UEFI), FOSS GPU DRIVERS
+title   ALG installer (x86_64, UEFI), FOSS GPU DRIVERS
 sort-key 01
 linux   /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd  /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
